# FlipClockPandora

./: README.FlipClockPandora
flipclock_PND_Build/: Makefile  flipclock.pnd
flipclock_PND_Build/flipclock_pandora/: PXML.xml  fcT
flipclock_PND_Build/flipclock_pandora/flipclock/: flipClockPrefs.xml
flipclock_PND_Build/flipclock_pandora/flipclock/media/: uiDef.xml
src/: .alarmFunc.c.swp  .fc4.c.swp  Makefile  Makefile.am  Makefile.in  Makefile~  alarmDFunc.c  alarmDFunc.h  alarmDv2Func.c  alarmFunc.c  alarmFunc.c~  alarmFunc.h  audioFunc.c  bme.c  bme.h  cscope.out  fc3.c  fc4.c  fcAlarmSync.c  fcFMRadio.c  fcT  fileDirFunc.c  gtkhak  gtkhak.c  make.out  miscFunc.c  miscFunc.h  mouseFunc.c  mouseFunc.h  n800FMRadio.c  n800FMRadio.h  ossoHelper.c  ossoHelper.h  themeManager.c  themeManager.h  userPrefs.c  userPrefs.h  xmlFunc.c
src/flipclock/: .flipClockPrefs.xml  flipClockPrefs.xml  flipClockPrefsExample.xml  flipClockPrefsSave.xml
src/flipclock/themes/defaultFlip/: themeDef.xml
src/flipclock/themes/defaultNight/: themeDef.xml
src/flipclock_pandora/: PXML.xml
src/flipclock_pandora/flipclock/: .flipClockPrefs.xml
